--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 text-right d-none d-md-block">
-                    Segunda-feira, 01 de janeiro de 2045
+                    01 de janeiro de 2045
                 </div>
             </div>
             <div class="row align-items-center py-2 px-lg-5">
