--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
         <meta charset="utf-8" />
         <title>FuteNews</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-        <meta content="Free HTML Templates" name="keywords" />
-        <meta content="Free HTML Templates" name="description" />
+        <meta
+            content="Paixão, profissionalismo, futebol. Descubra a
+        essência em cada lance."
+            name="keywords"
+        />
+        <meta
+            content="Paixão, profissionalismo, futebol. Descubra a
+        essência em cada lance."
+            name="description"
+        />
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon" />
